--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <title>Example App</title>
 </head>
+
 <body>
- 
+    <div class="jumbotron"
+        style="background-image: url(https://storage.googleapis.com/afs-prod/media/media:6ca4c6d1ac81433191989939b4131e03/800.jpeg); background-size: 100%;">
+        <div class="container for-about">
+            <h1>Mongo Scraper</h1>
+        </div>
+    </div>
+
     {{{body}}}
- 
+
 </body>
+
 </html>
