html routes hit

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,6 +4,6 @@
 
 <ul>
   {{#each dbArticles}}
-    <li>{{dbArticles.title}}{{dbArticles.link}}</li>
+    <li>{{title}}{{link}}</li>
   {{/each}}
 </ul>
