--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,8 +2,10 @@
     <h1>HEADING</h1>
 </div>
 
+  
 <ul>
   {{#each dbArticles}}
-    <li>{{title}}{{link}}</li>
-  {{/each}}
+   <li>{{title}}</li>
+   {{/each}}
 </ul>
+  
