links and articles rendering

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,7 @@
   
 <ul>
   {{#each dbArticles}}
-   <li>{{title}}</li>
+   <li>{{title}}<a href = "https://www.nytimes.com{{link}}">  Article Link </a></li>
    {{/each}}
 </ul>
   
