--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,11 +1,14 @@
-<div class = "jumbotron"> 
-    <h1>HEADING</h1>
+<div class="jumbotron">
+  <h1>NEWS SCRAPER</h1>
 </div>
 
-  
-<ul>
   {{#each dbArticles}}
-   <li>{{title}}<a href = "https://www.nytimes.com{{link}}">  Article Link </a></li>
-   {{/each}}
-</ul>
-  
+  <div class="card">
+    <div class="card-header">
+      {{title}}<a href="https://www.nytimes.com{{link}}"> Check out this article! </a>
+    </div>
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item"><a href="#" class="btn btn-primary">Save Article!</a></li>
+    </ul>
+  </div><br><br>
+  {{/each}}
