--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,6 @@
+
 <div class="jumbotron">
-  <h1>NEWS SCRAPER</h1>
+  <h1><strong>Scraped Articles</strong></h1>
 </div>
 
   {{#each dbArticles}}
@@ -8,7 +9,40 @@
       {{title}}<a href="https://www.nytimes.com{{link}}"> Check out this article! </a>
     </div>
     <ul class="list-group list-group-flush">
-      <li class="list-group-item"><button id="addNote" data-id = {{_id}} class="btn btn-danger">Make a Note!</button><button data-id = {{_id}} id="saveArticle" class="btn btn-primary">Save Article!</button></li>
+      <li class="list-group-item">
+        <button data-id = {{_id}} data-toggle="modal" data-target="#noteModal" data-whatever="@mdo" class="btn btn-danger addNote">Make a Note!</button>
+        <button data-id = {{_id}} class="btn btn-primary saveArticle">Save Article!</button>
+      </li>
     </ul>
   </div><br><br>
   {{/each}}
+
+
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">New message</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="form-group">
+            <label for="recipient-name" class="col-form-label">Recipient:</label>
+            <input type="text" class="form-control" id="recipient-name">
+          </div>
+          <div class="form-group">
+            <label for="message-text" class="col-form-label">Message:</label>
+            <textarea class="form-control" id="message-text"></textarea>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Send message</button>
+      </div>
+    </div>
+  </div>
+</div>
