scraping and saved page working

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,7 +30,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" id = "saved" href="#">Saved Articles</a>
+                <a class="nav-item nav-link" id = "saved" href="/saved">Saved Articles</a>
             </div>
         </div>
     </nav>
