--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -2,16 +2,41 @@
   <h1><strong>Saved Articles</strong></h1>
 </div>
 
-  {{#each Articles}}
-  <div class="card">
-    <div class="card-header" id = {{_id}}>
-      {{title}}<a href="https://www.nytimes.com{{link}}"> Check out this article! </a>
+{{#each Articles}}
+<div class="card">
+  <div class="card-header" id={{_id}}>
+    {{title}}<a href="https://www.nytimes.com{{link}}"> Check out this article! </a>
+  </div>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">
+      <button id={{_id}} data-toggle="modal" data-target="#myModal{{@index}}" class="btn btn-danger addNote">Make a
+        Note!</button>
+      <button id={{_id}} class="btn btn-primary deleteArticle">Delete Article!</button>
+    </li>
+  </ul>
+</div><br><br>
+
+
+<div class="modal fade" id="myModal{{@index}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog modal-dialog-scrollable" role="document">
+    <div class="modal-content">
+      <div class="modal-header bg-light">
+        <h5 class="modal-title" id="exampleModalLabel">{{title}}</h5>
+        
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p><input id='titleinput-{{_id}}' size = "55" placeholder = "Note Title" name='title'></p>
+        <textarea id='bodyinput-{{_id}}' cols = "55" placeholder = "Note Content" name='body'></textarea>
+      </div>
+      <div class="modal-footer bg-light">
+        <button id = "{{_id}}" type="button" class="btn  btn-outline-secondary submit" data-dismiss="modal">Submit</button>
+      </div>
     </div>
-    <ul class="list-group list-group-flush">
-      <li class="list-group-item">
-        <button id = {{_id}} data-toggle="modal" data-target="#noteModal" data-whatever="@mdo" class="btn btn-danger addNote">Make a Note!</button>
-        <button id = {{_id}} class="btn btn-primary deleteArticle">Delete Article!</button>
-      </li>
-    </ul>
-  </div><br><br>
-  {{/each}}
+  </div>
+</div>
+
+{{/each}}
